--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "cli-walkthrough",
   "version": "1.0.0",
   "description": "An interactive walkthrough for installing the Exercism CLI",
-  "devDependencies": {
-    "protagonist": "massivedanger/protagonist"
-  },
+  "devDependencies": {},
   "main": "index.js",
   "license": "MIT"
 }
