--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -1,10 +1,10 @@
-name: "Pull Request Labeler"
-on: [pull_request]
+# name: "Pull Request Labeler"
+# on: [pull_request]
 
-jobs:
-  triage:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/labeler@v2
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+# jobs:
+#   triage:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/labeler@v2
+#       with:
+#         repo-token: "${{ secrets.GITHUB_TOKEN }}"
