--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
+dist: xenial
 language: ruby
-sudo: false
+cache: bundler
 rvm:
-  - 2.5.1
+  - 2.6
+before_install:
+  - gem install bundler
 script:
   - bundle install
   - rake test
