--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,66 +1,66 @@
 
 # Track-specific reviewers
-tracks/ada/*                        @exercism/website-copy-ada
-tracks/ballerina/*                  @exercism/website-copy-ballerina
-tracks/bash/*                       @exercism/website-copy-bash
-tracks/c/*                          @exercism/website-copy-c
-tracks/ceylon/*                     @exercism/website-copy-ceylon
-tracks/cfml/*                       @exercism/website-copy-cfml
-tracks/clojure/*                    @exercism/website-copy-clojure
-tracks/coffeescript/*               @exercism/website-copy-coffeescript
-tracks/common-lisp/*                @exercism/website-copy-common-lisp
-tracks/coq/*                        @exercism/website-copy-coq
-tracks/cpp/*                        @exercism/website-copy-cpp
-tracks/crystal/*                    @exercism/website-copy-crystal
-tracks/csharp/*                     @exercism/website-copy-csharp
-tracks/d/*                          @exercism/website-copy-d
-tracks/dart/*                       @exercism/website-copy-dart
-tracks/delphi/*                     @exercism/website-copy-delphi
-tracks/emacs-lisp/*                 @exercism/website-copy-emacs-lisp
-tracks/elixir/*                     @exercism/website-copy-elixir
-tracks/elm/*                        @exercism/website-copy-elm
-tracks/erlang/*                     @exercism/website-copy-erlang
-tracks/factor/*                     @exercism/website-copy-factor
-tracks/fortran/*                    @exercism/website-copy-fortran
-tracks/fsharp/*                     @exercism/website-copy-fsharp
-tracks/gnu-apl/*                    @exercism/website-copy-gnu-apl
-tracks/go/*                         @exercism/website-copy-go
-tracks/groovy/*                     @exercism/website-copy-groovy
-tracks/haskell/*                    @exercism/website-copy-haskell
-tracks/haxe/*                       @exercism/website-copy-haxe
-tracks/idris/*                      @exercism/website-copy-idris
-tracks/java/*                       @exercism/website-copy-java
-tracks/javascript/*                 @exercism/website-copy-javascript
-tracks/julia/*                      @exercism/website-copy-julia
-tracks/kotlin/*                     @exercism/website-copy-kotlin
-tracks/lfe/*                        @exercism/website-copy-lfe
-tracks/lua/*                        @exercism/website-copy-lua
-tracks/mips/*                       @exercism/website-copy-mips
-tracks/nim/*                        @exercism/website-copy-nim
-tracks/objective-c/*                @exercism/website-copy-objective-c
-tracks/ocaml/*                      @exercism/website-copy-ocaml
-tracks/perl5/*                      @exercism/website-copy-perl5
-tracks/raku/*                       @exercism/website-copy-raku
-tracks/pharo-smalltalk/*            @exercism/website-copy-pharo-smalltalk
-tracks/php/*                        @exercism/website-copy-php
-tracks/plsql/*                      @exercism/website-copy-plsql
-tracks/pony/*                       @exercism/website-copy-pony
-tracks/powershell/*                 @exercism/website-copy-powershell
-tracks/prolog/*                     @exercism/website-copy-prolog
-tracks/purescript/*                 @exercism/website-copy-purescript
-tracks/python/*                     @exercism/website-copy-python
-tracks/r/*                          @exercism/website-copy-r
-tracks/racket/*                     @exercism/website-copy-racket
-tracks/reasonml/*                   @exercism/website-copy-reasonml
-tracks/ruby/*                       @exercism/website-copy-ruby
-tracks/rust/*                       @exercism/website-copy-rust
-tracks/scala/*                      @exercism/website-copy-scala
-tracks/scheme/*                     @exercism/website-copy-scheme
-tracks/shen/*                       @exercism/website-copy-shen
-tracks/sml/*                        @exercism/website-copy-sml
-tracks/swift/*                      @exercism/website-copy-swift
-tracks/tcl/*                        @exercism/website-copy-tcl
-tracks/typescript/*                 @exercism/website-copy-typescript
-tracks/vbnet/*                      @exercism/website-copy-vbnet
-tracks/vimscript/*                  @exercism/website-copy-vimscript
-tracks/x86-assembly/*               @exercism/website-copy-x86-assembly
+tracks/ada/**/*                        @exercism/website-copy-ada
+tracks/ballerina/**/*                  @exercism/website-copy-ballerina
+tracks/bash/**/*                       @exercism/website-copy-bash
+tracks/c/**/*                          @exercism/website-copy-c
+tracks/ceylon/**/*                     @exercism/website-copy-ceylon
+tracks/cfml/**/*                       @exercism/website-copy-cfml
+tracks/clojure/**/*                    @exercism/website-copy-clojure
+tracks/coffeescript/**/*               @exercism/website-copy-coffeescript
+tracks/common-lisp/**/*                @exercism/website-copy-common-lisp
+tracks/coq/**/*                        @exercism/website-copy-coq
+tracks/cpp/**/*                        @exercism/website-copy-cpp
+tracks/crystal/**/*                    @exercism/website-copy-crystal
+tracks/csharp/**/*                     @exercism/website-copy-csharp
+tracks/d/**/*                          @exercism/website-copy-d
+tracks/dart/**/*                       @exercism/website-copy-dart
+tracks/delphi/**/*                     @exercism/website-copy-delphi
+tracks/emacs-lisp/**/*                 @exercism/website-copy-emacs-lisp
+tracks/elixir/**/*                     @exercism/website-copy-elixir
+tracks/elm/**/*                        @exercism/website-copy-elm
+tracks/erlang/**/*                     @exercism/website-copy-erlang
+tracks/factor/**/*                     @exercism/website-copy-factor
+tracks/fortran/**/*                    @exercism/website-copy-fortran
+tracks/fsharp/**/*                     @exercism/website-copy-fsharp
+tracks/gnu-apl/**/*                    @exercism/website-copy-gnu-apl
+tracks/go/**/*                         @exercism/website-copy-go
+tracks/groovy/**/*                     @exercism/website-copy-groovy
+tracks/haskell/**/*                    @exercism/website-copy-haskell
+tracks/haxe/**/*                       @exercism/website-copy-haxe
+tracks/idris/**/*                      @exercism/website-copy-idris
+tracks/java/**/*                       @exercism/website-copy-java
+tracks/javascript/**/*                 @exercism/website-copy-javascript
+tracks/julia/**/*                      @exercism/website-copy-julia
+tracks/kotlin/**/*                     @exercism/website-copy-kotlin
+tracks/lfe/**/*                        @exercism/website-copy-lfe
+tracks/lua/**/*                        @exercism/website-copy-lua
+tracks/mips/**/*                       @exercism/website-copy-mips
+tracks/nim/**/*                        @exercism/website-copy-nim
+tracks/objective-c/**/*                @exercism/website-copy-objective-c
+tracks/ocaml/**/*                      @exercism/website-copy-ocaml
+tracks/perl5/**/*                      @exercism/website-copy-perl5
+tracks/raku/**/*                       @exercism/website-copy-raku
+tracks/pharo-smalltalk/**/*            @exercism/website-copy-pharo-smalltalk
+tracks/php/**/*                        @exercism/website-copy-php
+tracks/plsql/**/*                      @exercism/website-copy-plsql
+tracks/pony/**/*                       @exercism/website-copy-pony
+tracks/powershell/**/*                 @exercism/website-copy-powershell
+tracks/prolog/**/*                     @exercism/website-copy-prolog
+tracks/purescript/**/*                 @exercism/website-copy-purescript
+tracks/python/**/*                     @exercism/website-copy-python
+tracks/r/**/*                          @exercism/website-copy-r
+tracks/racket/**/*                     @exercism/website-copy-racket
+tracks/reasonml/**/*                   @exercism/website-copy-reasonml
+tracks/ruby/**/*                       @exercism/website-copy-ruby
+tracks/rust/**/*                       @exercism/website-copy-rust
+tracks/scala/**/*                      @exercism/website-copy-scala
+tracks/scheme/**/*                     @exercism/website-copy-scheme
+tracks/shen/**/*                       @exercism/website-copy-shen
+tracks/sml/**/*                        @exercism/website-copy-sml
+tracks/swift/**/*                      @exercism/website-copy-swift
+tracks/tcl/**/*                        @exercism/website-copy-tcl
+tracks/typescript/**/*                 @exercism/website-copy-typescript
+tracks/vbnet/**/*                      @exercism/website-copy-vbnet
+tracks/vimscript/**/*                  @exercism/website-copy-vimscript
+tracks/x86-assembly/**/*               @exercism/website-copy-x86-assembly
